# maap-help-jupyter-extension

./: .gitignore  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
gulp/: config.js
lib/: App.tsx  activate.d.ts  activate.js  funcs.d.ts  funcs.js  index.d.ts  index.js  index.tsx  index1.js  popups.d.ts  popups.js  request.js  widgets.d.ts  widgets.js
maap_help_jupyter_extension.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
maap_help_jupyter_extension/labextension/: build_log.json  package.json
maap_help_jupyter_extension/labextension/static/: lib_index_js.01b440501e82b7c872ff.js  lib_index_js.01b440501e82b7c872ff.js.map  lib_index_js.11fd56415588c692fd3c.js  lib_index_js.11fd56415588c692fd3c.js.map  lib_index_js.1add79dbc2185bdeeeaf.js  lib_index_js.1add79dbc2185bdeeeaf.js.map  lib_index_js.2aa245c71015c8489cb0.js  (+162 more)
src/: activate.ts  build.js  constants.d.ts  constants.js  constants.ts  funcs.ts  function.js  globals.d.ts  globals.js  index.html  index.js  index.ts  maap-tour.tsx  plugin.tsx  popups.js  popups.ts  request.ts  tour.tsx  widgets.js  widgets.ts
src/__tests__/: maap_help_jupyter_extension.spec.ts
src/jupyterlab-tour/: LICENSE  constants.ts  defaults.tsx  index.ts  plugin.tsx  tour.ts  tourManager.ts
style/: base.css
ui-tests/: package.json
ui-tests/tests/: maap_help_jupyter_extension.spec.ts
webpack/: webpack.config.helper.cjs  webpack.config.js  webpack.config.prod.js
(+15 files in other folders)
