[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1", "jupyterlab-tour~=3.1.4"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["maap_help_jupyter_extension/labextension/static/style.js"]
ensured-targets = ["maap_help_jupyter_extension/labextension/static/style.js", "maap_help_jupyter_extension/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["maap_help_jupyter_extension/labextension/**", "yarn.lock", ".*", "package-lock.json"]
